--- a/index.html
+++ b/index.html
@@ -1,69 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>百度</title>
-</head>
-
-<body>
-<input name="search" id="search" type="text" placeholder="输入搜索内容"  value="" />
-<button id="btn">百度一下</button>
-<ol id="ol">
-</ol>
-</body>
-<script type="text/javascript">
-	var btn = document.getElementById('btn');
-	var search = document.getElementById('search');
-	var ol = document.getElementById('ol');
-	val = search.value;	
-	
-	search.onkeyup = function (e) {//按键信息对象以函数参数的形式传递进来了，就是那个e  
-		var search = document.getElementById('search');
-		val = search.value;	
-		
-//		var code = e.charCode || e.keyCode;  //取出按键信息中的按键代码(大部分浏览器通过keyCode属性获取按键代码，但少部分浏览器使用的却是charCode)  		
-//		if (code == 13) {  
-//			alert(1);
-//			
-//		}  
-		myJsonp();
-	}  
-	var oTime = new Date().getTime();
-	btn.onclick = function newWindow(){
-		
-		if(val != ""){
-			search.style.outlineColor = "green";
-			window.location.assign('https://www.baidu.com/s?wd='+val+'&t='+oTime);
-		}else{
-			search.style.outlineColor = "red";
-			search.setAttribute("placeholder","你输入的内容为空！");
-			
-		}	
-		
-	 };
-	
-	var oScript;	
-	function  myJsonp(){			
-		if(val != ""){	
-			search.style.outlineColor = "green";
-			if(oScript) {//如果存在先移除
-                    document.body.removeChild(oScript);
-             }
-			oScript = document.createElement('script');
-			oScript.src = 'https://sp0.baidu.com/5a1Fazu8AA54nxGko9WTAnF6hhy/su?wd=' + val+'&cb=fn';
-        	document.body.appendChild(oScript);
-			
-		}else{
-			search.style.outlineColor = "red";
-		}		
-	 }		
-	
-	function fn(jsons) {			
-                ol.innerHTML = '';
-                for(var i = 0; i < jsons.s.length; i++) {					
-                    ol.innerHTML += '<li><a href="https://www.baidu.com/s?wd='+jsons.s[i]+'">'+jsons.s[i]+'</li>';
-                }
-    }
-	
+<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+<title>街景-Hello world</title><script type="text/javascript">var _speedMark = new Date();</script>
+<script charset="utf-8" src="http://map.qq.com/api/js?v=2.exp&key=d84d6d83e0e51e481e50454ccbe8986b"></script>
+<script>
+var init = function(){
+    pano_container=document.getElementById('PanoCtn');  //街景容器
+    pano = new qq.maps.Panorama(pano_container, {
+        pano: '10011501120802180635300',    //场景ID
+        pov:{   //视角
+                heading:1,  //偏航角
+                pitch:0     //俯仰角
+            },
+        zoom:1      //缩放
+    })
+}
 </script>
+</head>
+<body onload="init()">
+    <div id="PanoCtn" style="width:500px;height:300px"></div>
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=37873055" charset="UTF-8"></script></body>
 </html>
