--- a/index1.html
+++ b/index1.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>meinv</title>
+<title>baidu</title>
 </head>
 
 <body>
@@ -15,41 +15,17 @@
 	var btn = document.getElementById('btn');
 	var search = document.getElementById('search');
 	var ol = document.getElementById('ol');
-	val = search.value;	
-	
-	search.onkeyup = function (e) {//按键信息对象以函数参数的形式传递进来了，就是那个e  
-		var search = document.getElementById('search');
-		val = search.value;	
-		
-//		var code = e.charCode || e.keyCode;  //取出按键信息中的按键代码(大部分浏览器通过keyCode属性获取按键代码，但少部分浏览器使用的却是charCode)  		
-//		if (code == 13) {  
-//			alert(1);
-//			
-//		}  
-		myJsonp();
-	}  
-	var oTime = new Date().getTime();
-	btn.onclick = function newWindow(){
-		
-		if(val != ""){
-			search.style.outlineColor = "green";
-			window.location.assign('https://www.baidu.com/s?wd='+val+'&t='+oTime);
-		}else{
-			search.style.outlineColor = "red";
-			search.setAttribute("placeholder","你输入的内容为空！");
-			
-		}	
-		
-	 };
+	var val = search.value;	
 	
 	var oScript;	
 	function  myJsonp(){			
 		if(val != ""){	
 			search.style.outlineColor = "green";
+			
 			if(oScript) {//如果存在先移除
                     document.body.removeChild(oScript);
-             }
-			oScript = document.createElement('script');
+             }		
+			oScript = document.createElement('script');			 
 			oScript.src = 'https://sp0.baidu.com/5a1Fazu8AA54nxGko9WTAnF6hhy/su?wd=' + val+'&cb=fn';
         	document.body.appendChild(oScript);
 			
@@ -64,6 +40,42 @@
                     ol.innerHTML += '<li><a href="https://www.baidu.com/s?wd='+jsons.s[i]+'">'+jsons.s[i]+'</li>';
                 }
     }
+	search.onkeyup = function (e) {//按键信息对象以函数参数的形式传递进来了，就是那个e  
+		var search = document.getElementById('search');
+		val = search.value;	
+		Enter(e);		
+		myJsonp();
+	}  
+	
+	function Enter(e){
+		var code = e.charCode || e.keyCode;  //取出按键信息中的按键代码(大部分浏览器通过keyCode属性获取按键代码，但少部分浏览器使用的却是charCode)  		
+		if (code == 13) {  		
+				if(val ==""){	
+				search.style.outlineColor = "red";
+				search.setAttribute("placeholder","你输入的内容为空！");
+				return;	
+				}
+			}  
+	}
+	document.addEventListener("keydown",function(e){
+		Enter(e);
+		myJsonp();
+	},false)
+	var oTime = new Date().getTime();
+	btn.onclick = function newWindow(){                             
+		
+		if(val != ""){
+			search.style.outlineColor = "green";
+			window.location.assign('https://www.baidu.com/s?wd='+val+'&t='+oTime);
+		}else{
+			search.style.outlineColor = "red";
+			search.setAttribute("placeholder","你输入的内容为空！");
+			
+		}	
+		
+	 };
+	
+	
 	
 </script>
 </html>
